--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
 
                       <img width="100"
                                height="108"
-                               src="C:\Users\Admin\Videos\portfolio_generator-main\portfolio_generator-main - Copy\tata.png"
+                               src="tata.png"
                                alt="Image Caption 7">
                     
                     </blockquote>
@@ -394,7 +394,7 @@
 
                         <img width="100"
                         height="108"
-                        src="C:\Users\Admin\Videos\portfolio_generator-main\portfolio_generator-main - Copy\qu.png"
+                        src="qu.png"
                         alt="Image Caption 7">
 
                     
